kqed_dev4/src/objects/Classification_Code__c.object
<CustomObject>
    <description>This values is used to match the PB5 input on a new contact giving a donation to match their preferences.  Do not delete.</description>
    <fields>
        <fullName>TA_Code_Value_ID__c</fullName>
        <label>TA Code Value ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classification_code__c</fullName>
        <label>Classification Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classification_value__c</fullName>
        <label>Classification Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code_description__c</fullName>
        <label>Classification Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tab_name__c</fullName>
        <description>Tab Name</description>
        <inlineHelpText>Tab Name</inlineHelpText>
        <label>Tab Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value_description__c</fullName>
        <label>Classification Value Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Classification Code/Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Classification Code/Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification Code/Value</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>